--- a/force-app/main/default/classes/AccountBatch_Test.cls
+++ b/force-app/main/default/classes/AccountBatch_Test.cls
@@ -11,7 +11,11 @@ public class AccountBatch_Test {
     @TestSetup
     public static void loadData() {
         Account acc = (Account)TestDataFactory.createSObject(new Account(), TestDataFactory.CustomerAccountsDefaults.class);
+        acc.ia_crm__IntacctID__c = '1';
         insert acc;
+
+        acc.Intacct_Customer_Id__c = null;
+        update acc;
         
     }
 
@@ -23,6 +27,6 @@ public class AccountBatch_Test {
         Test.stopTest();
         Account acc = [SELECT Id, Intacct_Customer_Id__c from Account LIMIT 1];
         Assert.isTrue(acc.Intacct_Customer_Id__c != null, 'Intacct Customer Id should has a value.');
-        
+
     }
 }
