change close date

--- a/force-app/main/default/classes/FlowAccountTrackProgress_Test.cls
+++ b/force-app/main/default/classes/FlowAccountTrackProgress_Test.cls
@@ -1,5 +1,5 @@
 /* 
-  Created by Juan Ramirez, March 15/2024
+  Created by Juan Ramirez, May 24/2024
 
     @Purpose/Methods:
     Process to manage all unit test about the flow to get maximun value from account to assign it to Intacct Customer Id field
@@ -8,6 +8,16 @@
 @isTest
 public class FlowAccountTrackProgress_Test {
 
+    /**
+	 * @author Juan Ramirez
+	 * @date 2024/05/24
+	 * @description Given an Account
+        When record type is 'Customer Accounts'
+        And Type is 'Customer'
+        And the account is inserted
+        Then Intacct_Customer_Id__c is generated with the max value available
+     * 
+	 */
     @isTest
     public static void createAccount_Test() {
 
@@ -19,6 +29,16 @@ public class FlowAccountTrackProgress_Test {
         Assert.areEqual(1, accResult.Intacct_Customer_Id__c, 'Intacct Customer Id should be the maximum available.');
     }
 
+    /**
+	 * @author Juan Ramirez
+	 * @date 2024/05/24
+	 * @description Given an Account
+        When record type is 'Customer Accounts'
+        And Type is 'Prospect'
+        And the account is updated to 'Customer' Type 
+        Then Intacct_Customer_Id__c is generated with the max value available
+     * 
+	 */
     @isTest
     public static void updateAccount_Test() {
 
